  * more verbose abort message if track is specified with some maintainance
    command (#369677)
  * Added more DVD related fixes from SuSE's wodim-1.0pre5cvs-6.src.rpm
  * --devices option for wodim (modeled after cdrskin's output)
  * clear profile names printing (using code from libburnia)
  * cleanup with unused embedded CVS revision strings from Schilling and
    more gcc -Wall correctness

  [ Thomas Schmidt ]
  * workaround for older libmagic API

 -- Eduard Bloch <blade@debian.org>  Sat,  2 Dec 2006 23:05:33 +0100

cdrkit (1.1.0) RELEASED; urgency=medium

  [ Eduard Bloch ]
  * replacement of libdeflt, config parser rewrite; more user-friendly,
    more flexible/tolerant now
  * config overhaul, much more dynamic checks, including fixes for SunOS and
    AIX environment, including proper libiconv detection, and processing of
    LDFLAGS provided by user. Also fixed confusing double-checks for some of
    the variables in cdda2wav.c.
  * mass renaming of applications and libraries, see FAQ
  * dirsplit -S fix, oversized have been possible before
  * consistent version display
  * cleanup of libschily, removed unused/superfluous parts (assumed having a
    modern POSIX compliant environment). Renamed to librols
    (RemainsOfLibSchily).
  * reenabled selection of the DVD driver, accidentaly disabled in 1.0, when
    beeing in non-verbose mode
  * made dirsplit work with file symlinks
  * incorporated some OpenSUSE patches:
    + cdrkit-HZ.patch (with initialized value, *sic*)
    + cdrkit-dvd-fix.patch (return code tracking)
    + cdrkit-gcc-workaround.patch
    + cdrkit-mkisofs-fail-on-large-file.patch (don't just skip them)
    + cdrkit-mkisofs-grow-check.patch (tolerate grown files)
    + cdrkit-perms.patch (not breaking on missing device files)

  [ Christian Fromme ]
  * big cleanup, phase I, getting rid from Cstyle function definitions in
    applications

  [ Lorenz Minder ]
  * user output junk filter in icedax/toc.c