@@ -10,6 +10,7 @@ cdrkit (1.1.1) UNRELEASED; urgency=low
   * clear profile names printing (using code from libburnia)
   * cleanup with unused embedded CVS revision strings from Schilling and
     more gcc -Wall correctness
+  * reenabled -format functionality (bug in program function control flow)
 
   [ Thomas Schmidt ]
   * workaround for older libmagic API
